# qt

./: CMakeLists.txt  CredentialsTableView.ui.qml  CredentialsView.ui.qml  DBTableView.ui.qml  DataBasesView.ui.qml  README.md  main.cpp  main.qml  mycredentials.h  mylistmodel.h  qml.qrc  sqlcredentialsmodel.cpp  sqlcredentialsmodel.h
